--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Demo/Demo.xcworkspace -scheme HostsFileUpdater-Demo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- set -o pipefail && xcodebuild test -workspace Demo/Demo.xcworkspace -scheme Demo -sdk macosx ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
 
 
