--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,18 @@
 
 language: objective-c
 # cache: cocoapods
-podfile: Demo/Podfile
+podfile: Podfile
+
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Demo
+- brew update
+- brew uninstall xctool
+- brew install xctool
+- export LANG=en_US.UTF-8
+- gem install cocoapods --no-ri --no-rdoc # Since Travis is not always on latest version
+
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+
 script:
-- set -o pipefail && xcodebuild test -workspace Demo/Demo.xcworkspace -scheme Demo -sdk macosx ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- set -o pipefail && xcodebuild test -workspace Demo.xcworkspace -scheme Demo -sdk macosx ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
-
-
-# language: objective-c
-
-# before_script:
-#   - export LANG=en_US.UTF-8
-#   - cd Demo ; pod install ; cd ..
-
-# xcode_workspace: Demo/Demo.xcworkspace
-
-# xcode_scheme: Demo
-
-# xcode_sdk: iphonesimulator
